CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4p
------------
* Cassidy indoor sex scenes added. Must be unlocked
* Cassidy sparring sex scenes (win/loss) added. Must be unlocked by first having regular sex
* Fixed an error in Cavalcade score evaluation
* Slightly boosted the default girth cap for penetration, which will hopefully fix some stringent NPCs refusing penetration
* Vaughn task 3: you can now trigger the scene by waiting in the inn too

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4o2
-------------
* Fixed a bug related to Zebras (specifically when viewing their offspring in the nursery, but likely to have other effects too)
* The usual bugs and typos
* Fixed some weirdness in Cale's Rogue training fuck, [Take it] branch
* Fixed a bug that would crash the game if a very specific set of actions were taken during the intro
* The old Fertilium potion was renamed to Gestarium+. Its potence has increased slightly
* Added a new Fertilium and Fertilium+ potions, which work as a potency enhancers. Adds a buff for 1 day or 5 days that greatly increases chances of impregnating and getting pregnant. Buy them from Patchwork for the moment
* Added the Infertilium and Infertilium+ potions, which work as contraceptives. Adds a debuff for 1 or 5 days that almost certainly prevents pregnancy. Buy them from Patchwork for the moment

Version 0.4o
------------
* Typos and bugfixes galore
* Persistent status effects have been coded
 - For now, you can get some stat boosts from Cveta's performances
 - You can also get an experience boost from the food in the LB inn
 - The same experience boost is added at the end of the Halloween event (bit late for it, but oh well)
 - Getting food from Momo also gives the exp buff