@@ -9,6 +9,7 @@ Version 0.4p
 ------------
 * Cassidy indoor sex scenes added. Must be unlocked
 * Cassidy sparring sex scenes (win/loss) added. Must be unlocked by first having regular sex
+* Cassidy now has a followup to the talk about looks. This will change some scenes slightly
 * Fixed an error in Cavalcade score evaluation
 * Slightly boosted the default girth cap for penetration, which will hopefully fix some stringent NPCs refusing penetration
 * Vaughn task 3: you can now trigger the scene by waiting in the inn too
